add new blog, pagination, update first blog, and css

--- a/_posts/2018-08-15-first.md
+++ b/_posts/2018-08-15-first.md
@@ -1,13 +1,14 @@
 ---
 imgSrc: old-window.jpg
-imgAlt: a website about typography
+imgAlt: an old window
 layout: post
 meta: To understand why let and const were added, it’s probably best to look at an example of when using var can get tricky.
 main-class: main--blog
-title: When to use const and let · Daniel Munoz
+title: When to use let and const · Daniel Munoz
 header: When to use let and const
 ---
-There are two 'new' ways to declare variables in JavaScript: let and const.
+
+There are two "new" ways to declare variables in JavaScript: let and const.
 
  To understand why let and const were added, it’s probably best to look at an example of when using var can get tricky.
 
